--- a/css/custom.css
+++ b/css/custom.css
@@ -32,6 +32,11 @@ article {
   -webkit-transition: background-image 0.2s ease;
   transition: background-image 0.2s ease;
 }
+@media screen and (max-width: 720px) {
+  .disappear-onresize {
+    display: none;
+  }
+}
 
 body {
   font-size: 16px;
@@ -118,7 +123,8 @@ h2 {
 .centerbot {
   position: absolute;
   top: 50%;
-  transform: translateY(-50%)
+  transform: translateY(-50%);
+  left: 5%;
 }
 
 .copyright {
@@ -191,22 +197,22 @@ h2 {
 
 @media screen and (min-width: 991px) and (max-width: 1199px) {
   .sidebar-experimental {
-    right: 18px;
+    right: 3%;
   }
 }
 @media screen and (min-width: 1200px) {
   .sidebar-experimental {
-    right: 30px;
+    right: 5%;
   }
 }
 @media screen and (min-width: 1440px) {
   .sidebar-experimental {
-    right: 170px;
+    right: 8%;
   }
 }
 @media screen and (min-width: 2560px) {
   .sidebar-experimental {
-    right: 726px;
+    right: 10%;
   }
 }
 
@@ -302,7 +308,7 @@ h2 {
  */
 
 .profile-pic {
-  width: 90%;
+  width: 65%;
   height: auto;
 }
 
@@ -335,20 +341,6 @@ h2 {
   width: 30%;
   height: 30%;
   padding: 3px;
-}
-
-/* global values */
-
-.col-fixed-width {
-  width: 320px;
-  height: 100%;
-  align-content: center;
-}
-
-/* about gssi article */
-.about-control {
-  width: 100%;
-  height: 100%;
 }
 
 .aboutheader {
